* okno edycji klientów
* drobne poprawki w kodzie
* zmiana nazwy okna głównego przeniesiona do funkcji
* wykorzystanie funkcji z database.cpp w oferta.cpp

v 1.82
* możliwość usuwania towarów i klientów
* zmiana mechanizmu logowania
* sprawdzanie wykonania się każdego zapytania mysql na wypadek błędu połączenia
* drobne poprawki
* Wybor Towaru - zachowanie ostatniego wyszukiwania
* okno kalendarzowe do zapytania

v. 1.83
* niewielkie poprawki w oknie dodawania użytkownika
* ikona
* informacje debugowania przeniesione do makra DEBUG
* otwieranie bazy i wykonywanie zapytania przeniesione do makr EXEC i LOGIN
* wyłączenie informacji debugowania w wersji release
* klasa user rozbudowana o konstruktory korzystające z bazy
* uproszczenie procedury logowania
* poprawione okno "o kOferta"
* dane orginalnego autora na wydruku z zapisanej oferty

v. 1.84
* możliwośc dodawania użytkowników z poziomu nie-roota
* drobne usprawnienia w kodzie
* usunięcie wyskakującego okienka o niemożliwości połączenia z bazą na etapie logowania (info w pasku stanu)
* usunięcie niepotrzebnych/nieaktualnych plików z paczki dla Windows

v. 1.85
* przebudowanie struktury plików źródłowych
* auto-update

v. 1.86
* kopiowanie nagłówka na kolejne strony oferty
* dokument opisujący system
* zastosowanie systemu wersjonowania git
* aktualizacja daty przy nadaniu nowego numeru oferty

TODO:
* przeniesienie serwera na platformę Raspbery Pi
* zmiana tabel z QTableWidget na QTableView z odpowiednim modelem
* wyszukiwarka w zapisanych ofertach
* przygotowania do translacji
* skróty klawiatórowe
* ikony
* sprawdzanie skrótu SHA1 pobranej aktualizacji
* lepszy skrypt aktualizujący wersję/url/hash nowego buildu w bazie
* przerobienie funkcji sha1
* wielowątkowość
* opcje comboboxów przeniesione do bazy
* możliwość dodawania opcji komboboksów do bazy
* zapisane ofery w formie odnośników do tabeli combosów
* zapisywanie informacji o wydruku w zapisanych ofertach
* dodatkowy editbox na "uwagi"

